bin/com/jsv/y.output
   0  $accept : input $end

   1  input :
   2        | input line

   3  line : NL
   4       | stmt NL
   5       | stmt2 NL

   6  input2 :
   7         | input2 line2

   8  line2 : NL
   9        | stmt NL

  10  stmt : DIM declvar POINT
  11       | TYPE NAME declvars ENDTYPE POINT
  12       | BREAK POINT
  13       | attrib POINT
  14       | WHILE log POINT input2 ENDWHILE POINT
  15       | IF log POINT input2 ENDIF POINT
  16       | IF log POINT input2 ELSE POINT input2 ENDIF POINT
  17       | TBFIRST nametab POINT
  18       | FOR EACH namestru IN nametab POINT input2 ENDFOR POINT
  19       | CALL namefunc2 ml callparam POINT
  20       | APPEND namestru TO nametab POINT
  21       | READ nametab TO namestru logkey POINT
  22       | DELETE nametab logkey POINT
  23       | LOAD NAME POINT
  24       | GOTO SCREEN NUMINT POINT
  25       | BRANCH POINT
  26       | SELECT sqlfds FROM sqljoin INTO sqltb sqlwhere POINT
  27       | INSERT INTO sqltb LPAR sqlfds RPAR VALUES LPAR sqlvls RPAR POINT
  28       | UPDATE sqltb SET sqlpairs sqlwhere POINT
  29       | MODIFY nametab FROM namestru logkey POINT
  30       | NATIVECALL NAME POINT

  31  stmt2 : SUB namefunc ml parameters POINT input ENDSUB POINT

  32  declvar : NAME AS type
  33          | TABLE AS type

  34  declvars :
  35           | declvars declvar1

  36  declvar1 : NL
  37           | declvar

  38  type : TYPEC
  39       | TYPEI
  40       | TYPEF
  41       | TYPEB
  42       | namestru

  43  namestru : NAME

  44  nametab : NAME

  45  namefunc : NAME

  46  namefunc2 : NAME
  47            | CALLPROG

  48  attrib : var EQ exp

  49  var : NAME
  50      | FIELD

  51  exp : exp PLUS exp
  52      | exp MINUS exp
  53      | exp TIMES exp
  54      | exp DIV exp
  55      | LPAR exp RPAR
  56      | NUMINT
  57      | NUMFLT
  58      | NAME
  59      | FIELD
  60      | STRING

  61  log : log OR log
  62      | log AND log
  63      | log EQ log
  64      | log NEQ log
  65      | log LT log
  66      | log LTE log
  67      | log GT log
  68      | log GTE log
  69      | LPAR log RPAR
  70      | TRUE
  71      | FALSE
  72      | NUMINT
  73      | NUMFLT
  74      | STRING
  75      | var

  76  logtb : NAME EQ nameconst

  77  logtbs :
  78         | logtbs logtb

  79  logkey : KEY logtbs

  80  parameters : funcins funcouts

  81  funcins :
  82          | funcin

  83  funcin : IN declvars

  84  funcouts :
  85           | funcout

  86  funcout : OUT declvars

  87  callparam : callouts callins

  88  callouts :
  89           | callout

  90  callout : OUT callatribs

  91  callins :
  92          | callin

  93  callin : IN callatribs

  94  callatribs :
  95             | callatribs callatrib ml

  96  callatrib : NAME EQ nameconst

  97  nameconst : NAME
  98            | STRING
  99            | NUMINT
 100            | NUMFLT
 101            | FIELD

 102  ml :
 103     | ml NL

 104  sqlname : NAME
 105          | NAMESQLJ

 106  sqlfds : sqlname
 107         | sqlfds COMMA sqlname

 108  sqlvls : nameconst
 109         | sqlvls COMMA nameconst

 110  sqltb : NAME

 111  sqlvtb : NAME

 112  sqllog : sqllog OR sqllog
 113         | sqllog AND sqllog
 114         | sqllog EQ sqllog
 115         | sqllog NEQ sqllog
 116         | sqllog LT sqllog
 117         | sqllog LTE sqllog
 118         | sqllog GT sqllog
 119         | sqllog GTE sqllog
 120         | LPAR sqllog RPAR
 121         | TRUE
 122         | FALSE
 123         | NUMINT
 124         | NUMFLT
 125         | STRING
 126         | FIELD
 127         | sqlname

 128  sqlwhere :
 129           | WHERE sqllog

 130  sqlvar : TRUE
 131         | FALSE
 132         | NUMINT
 133         | NUMFLT
 134         | STRING
 135         | NAME
 136         | FIELD

 137  sqlfield : NAME

 138  sqlpair : sqlfield EQ sqlvar

 139  sqlpairs : sqlpair
 140           | sqlpairs COMMA sqlpair

 141  sqljoin : sqljoininner

 142  sqljoininner : sqltb
 143               | sqltb AS NAME
 144               | sqljoininner INNER JOIN sqltb AS NAME sqlon

 145  sqlon : ON sqlonpars

 146  sqlonpars : sqlonpar
 147            | sqlonpars AND sqlonpar

 148  sqlonpar : sqlfieldon EQ sqlfieldon

 149  sqlfieldon : NAMESQLJ

state 0
	$accept : . input $end  (0)
	input : .  (1)

	.  reduce 1

	input  goto 1


state 1
	$accept : input . $end  (0)
	input : input . line  (2)

	$end  accept
	NL  shift 2
	NAME  shift 3
	FIELD  shift 4
	DIM  shift 5
	IF  shift 6
	CALL  shift 7
	WHILE  shift 8
	SUB  shift 9
	TYPE  shift 10
	FOR  shift 11
	BREAK  shift 12
	APPEND  shift 13
	READ  shift 14
	DELETE  shift 15
	LOAD  shift 16
	TBFIRST  shift 17
	GOTO  shift 18
	BRANCH  shift 19
	NATIVECALL  shift 20
	MODIFY  shift 21
	UPDATE  shift 22
	SELECT  shift 23
	INSERT  shift 24
	.  error

	line  goto 25
	stmt  goto 26
	stmt2  goto 27
	attrib  goto 28
	var  goto 29


state 2
	line : NL .  (3)

	.  reduce 3


state 3
	var : NAME .  (49)

	.  reduce 49


state 4
	var : FIELD .  (50)

	.  reduce 50


state 5
	stmt : DIM . declvar POINT  (10)

	NAME  shift 30
	TABLE  shift 31
	.  error

	declvar  goto 32


state 6
	stmt : IF . log POINT input2 ENDIF POINT  (15)
	stmt : IF . log POINT input2 ELSE POINT input2 ENDIF POINT  (16)

	NUMINT  shift 33
	NUMFLT  shift 34
	NAME  shift 3
	FIELD  shift 4
	STRING  shift 35
	TRUE  shift 36
	FALSE  shift 37
	LPAR  shift 38
	.  error

	log  goto 39
	var  goto 40


state 7
	stmt : CALL . namefunc2 ml callparam POINT  (19)

	NAME  shift 41
	CALLPROG  shift 42
	.  error

	namefunc2  goto 43


state 8
	stmt : WHILE . log POINT input2 ENDWHILE POINT  (14)

	NUMINT  shift 33
	NUMFLT  shift 34
	NAME  shift 3
	FIELD  shift 4
	STRING  shift 35
	TRUE  shift 36
	FALSE  shift 37
	LPAR  shift 38
	.  error

	log  goto 44
	var  goto 40


state 9
	stmt2 : SUB . namefunc ml parameters POINT input ENDSUB POINT  (31)

	NAME  shift 45
	.  error

	namefunc  goto 46


state 10
	stmt : TYPE . NAME declvars ENDTYPE POINT  (11)

	NAME  shift 47
	.  error


state 11
	stmt : FOR . EACH namestru IN nametab POINT input2 ENDFOR POINT  (18)

	EACH  shift 48
	.  error


state 12
	stmt : BREAK . POINT  (12)

	POINT  shift 49
	.  error


state 13
	stmt : APPEND . namestru TO nametab POINT  (20)

	NAME  shift 50
	.  error

	namestru  goto 51


state 14
	stmt : READ . nametab TO namestru logkey POINT  (21)

	NAME  shift 52
	.  error

	nametab  goto 53


state 15
	stmt : DELETE . nametab logkey POINT  (22)

	NAME  shift 52
	.  error

	nametab  goto 54


state 16
	stmt : LOAD . NAME POINT  (23)

	NAME  shift 55
	.  error


state 17
	stmt : TBFIRST . nametab POINT  (17)

	NAME  shift 52
	.  error

	nametab  goto 56


state 18
	stmt : GOTO . SCREEN NUMINT POINT  (24)

	SCREEN  shift 57
	.  error


state 19
	stmt : BRANCH . POINT  (25)

	POINT  shift 58
	.  error


state 20
	stmt : NATIVECALL . NAME POINT  (30)

	NAME  shift 59
	.  error


state 21
	stmt : MODIFY . nametab FROM namestru logkey POINT  (29)

	NAME  shift 52
	.  error

	nametab  goto 60


state 22
	stmt : UPDATE . sqltb SET sqlpairs sqlwhere POINT  (28)

	NAME  shift 61
	.  error

	sqltb  goto 62


state 23
	stmt : SELECT . sqlfds FROM sqljoin INTO sqltb sqlwhere POINT  (26)

	NAME  shift 63
	NAMESQLJ  shift 64
	.  error

	sqlname  goto 65
	sqlfds  goto 66


state 24
	stmt : INSERT . INTO sqltb LPAR sqlfds RPAR VALUES LPAR sqlvls RPAR POINT  (27)

	INTO  shift 67
	.  error


state 25
	input : input line .  (2)

	.  reduce 2


state 26
	line : stmt . NL  (4)

	NL  shift 68
	.  error


state 27
	line : stmt2 . NL  (5)

	NL  shift 69
	.  error


state 28
	stmt : attrib . POINT  (13)

	POINT  shift 70
	.  error


state 29
	attrib : var . EQ exp  (48)

	EQ  shift 71
	.  error


state 30
	declvar : NAME . AS type  (32)

	AS  shift 72
	.  error


state 31
	declvar : TABLE . AS type  (33)

	AS  shift 73
	.  error


state 32
	stmt : DIM declvar . POINT  (10)

	POINT  shift 74
	.  error


state 33
	log : NUMINT .  (72)

	.  reduce 72


state 34
	log : NUMFLT .  (73)

	.  reduce 73


state 35
	log : STRING .  (74)

	.  reduce 74


state 36
	log : TRUE .  (70)

	.  reduce 70


state 37
	log : FALSE .  (71)

	.  reduce 71


state 38
	log : LPAR . log RPAR  (69)

	NUMINT  shift 33
	NUMFLT  shift 34
	NAME  shift 3
	FIELD  shift 4
	STRING  shift 35
	TRUE  shift 36
	FALSE  shift 37
	LPAR  shift 38
	.  error

	log  goto 75
	var  goto 40


state 39
	stmt : IF log . POINT input2 ENDIF POINT  (15)
	stmt : IF log . POINT input2 ELSE POINT input2 ENDIF POINT  (16)
	log : log . OR log  (61)
	log : log . AND log  (62)
	log : log . EQ log  (63)
	log : log . NEQ log  (64)
	log : log . LT log  (65)
	log : log . LTE log  (66)
	log : log . GT log  (67)
	log : log . GTE log  (68)

	POINT  shift 76
	EQ  shift 77
	AND  shift 78
	OR  shift 79
	LT  shift 80
	LTE  shift 81
	GT  shift 82
	GTE  shift 83
	NEQ  shift 84
	.  error


state 40
	log : var .  (75)

	.  reduce 75


state 41
	namefunc2 : NAME .  (46)

	.  reduce 46


state 42
	namefunc2 : CALLPROG .  (47)

	.  reduce 47


state 43
	stmt : CALL namefunc2 . ml callparam POINT  (19)
	ml : .  (102)

	.  reduce 102

	ml  goto 85


state 44
	stmt : WHILE log . POINT input2 ENDWHILE POINT  (14)
	log : log . OR log  (61)
	log : log . AND log  (62)
	log : log . EQ log  (63)
	log : log . NEQ log  (64)
	log : log . LT log  (65)
	log : log . LTE log  (66)
	log : log . GT log  (67)
	log : log . GTE log  (68)

	POINT  shift 86
	EQ  shift 77
	AND  shift 78
	OR  shift 79
	LT  shift 80
	LTE  shift 81
	GT  shift 82
	GTE  shift 83
	NEQ  shift 84
	.  error


state 45
	namefunc : NAME .  (45)

	.  reduce 45


state 46
	stmt2 : SUB namefunc . ml parameters POINT input ENDSUB POINT  (31)
	ml : .  (102)

	.  reduce 102

	ml  goto 87


state 47
	stmt : TYPE NAME . declvars ENDTYPE POINT  (11)
	declvars : .  (34)

	.  reduce 34

	declvars  goto 88


state 48
	stmt : FOR EACH . namestru IN nametab POINT input2 ENDFOR POINT  (18)

	NAME  shift 50
	.  error

	namestru  goto 89


state 49
	stmt : BREAK POINT .  (12)

	.  reduce 12


state 50
	namestru : NAME .  (43)

	.  reduce 43


state 51
	stmt : APPEND namestru . TO nametab POINT  (20)

	TO  shift 90
	.  error


state 52
	nametab : NAME .  (44)

	.  reduce 44


state 53
	stmt : READ nametab . TO namestru logkey POINT  (21)

	TO  shift 91
	.  error


state 54
	stmt : DELETE nametab . logkey POINT  (22)

	KEY  shift 92
	.  error

	logkey  goto 93


state 55
	stmt : LOAD NAME . POINT  (23)

	POINT  shift 94
	.  error


state 56
	stmt : TBFIRST nametab . POINT  (17)

	POINT  shift 95
	.  error


state 57
	stmt : GOTO SCREEN . NUMINT POINT  (24)

	NUMINT  shift 96
	.  error


state 58
	stmt : BRANCH POINT .  (25)

	.  reduce 25


state 59
	stmt : NATIVECALL NAME . POINT  (30)

	POINT  shift 97
	.  error


state 60
	stmt : MODIFY nametab . FROM namestru logkey POINT  (29)

	FROM  shift 98
	.  error


state 61
	sqltb : NAME .  (110)

	.  reduce 110


state 62
	stmt : UPDATE sqltb . SET sqlpairs sqlwhere POINT  (28)

	SET  shift 99
	.  error


state 63
	sqlname : NAME .  (104)

	.  reduce 104


state 64
	sqlname : NAMESQLJ .  (105)

	.  reduce 105


state 65
	sqlfds : sqlname .  (106)

	.  reduce 106


state 66
	stmt : SELECT sqlfds . FROM sqljoin INTO sqltb sqlwhere POINT  (26)
	sqlfds : sqlfds . COMMA sqlname  (107)

	COMMA  shift 100
	FROM  shift 101
	.  error


state 67
	stmt : INSERT INTO . sqltb LPAR sqlfds RPAR VALUES LPAR sqlvls RPAR POINT  (27)

	NAME  shift 61
	.  error

	sqltb  goto 102


state 68
	line : stmt NL .  (4)

	.  reduce 4


state 69
	line : stmt2 NL .  (5)

	.  reduce 5


state 70
	stmt : attrib POINT .  (13)

	.  reduce 13


state 71
	attrib : var EQ . exp  (48)

	NUMINT  shift 103
	NUMFLT  shift 104
	NAME  shift 105
	FIELD  shift 106
	STRING  shift 107
	LPAR  shift 108
	.  error

	exp  goto 109


state 72
	declvar : NAME AS . type  (32)

	NAME  shift 50
	TYPEC  shift 110
	TYPEI  shift 111
	TYPEF  shift 112
	TYPEB  shift 113
	.  error

	namestru  goto 114
	type  goto 115


state 73
	declvar : TABLE AS . type  (33)

	NAME  shift 50
	TYPEC  shift 110
	TYPEI  shift 111
	TYPEF  shift 112
	TYPEB  shift 113
	.  error

	namestru  goto 114
	type  goto 116


state 74
	stmt : DIM declvar POINT .  (10)

	.  reduce 10


state 75
	log : log . OR log  (61)
	log : log . AND log  (62)
	log : log . EQ log  (63)
	log : log . NEQ log  (64)
	log : log . LT log  (65)
	log : log . LTE log  (66)
	log : log . GT log  (67)
	log : log . GTE log  (68)
	log : LPAR log . RPAR  (69)

	RPAR  shift 117
	EQ  shift 77
	AND  shift 78
	OR  shift 79
	LT  shift 80
	LTE  shift 81
	GT  shift 82
	GTE  shift 83
	NEQ  shift 84
	.  error


state 76
	stmt : IF log POINT . input2 ENDIF POINT  (15)
	stmt : IF log POINT . input2 ELSE POINT input2 ENDIF POINT  (16)
	input2 : .  (6)

	.  reduce 6

	input2  goto 118


state 77
	log : log EQ . log  (63)

	NUMINT  shift 33
	NUMFLT  shift 34
	NAME  shift 3
	FIELD  shift 4
	STRING  shift 35
	TRUE  shift 36
	FALSE  shift 37
	LPAR  shift 38
	.  error

	log  goto 119
	var  goto 40


state 78
	log : log AND . log  (62)

	NUMINT  shift 33
	NUMFLT  shift 34
	NAME  shift 3
	FIELD  shift 4
	STRING  shift 35
	TRUE  shift 36
	FALSE  shift 37
	LPAR  shift 38
	.  error

	log  goto 120
	var  goto 40


state 79
	log : log OR . log  (61)

	NUMINT  shift 33
	NUMFLT  shift 34
	NAME  shift 3
	FIELD  shift 4
	STRING  shift 35
	TRUE  shift 36
	FALSE  shift 37
	LPAR  shift 38
	.  error

	log  goto 121
	var  goto 40


state 80
	log : log LT . log  (65)

	NUMINT  shift 33
	NUMFLT  shift 34
	NAME  shift 3
	FIELD  shift 4
	STRING  shift 35
	TRUE  shift 36
	FALSE  shift 37
	LPAR  shift 38
	.  error

	log  goto 122
	var  goto 40


state 81
	log : log LTE . log  (66)

	NUMINT  shift 33
	NUMFLT  shift 34
	NAME  shift 3
	FIELD  shift 4
	STRING  shift 35
	TRUE  shift 36
	FALSE  shift 37
	LPAR  shift 38
	.  error

	log  goto 123
	var  goto 40


state 82
	log : log GT . log  (67)

	NUMINT  shift 33
	NUMFLT  shift 34
	NAME  shift 3
	FIELD  shift 4
	STRING  shift 35
	TRUE  shift 36
	FALSE  shift 37
	LPAR  shift 38
	.  error

	log  goto 124
	var  goto 40


state 83
	log : log GTE . log  (68)

	NUMINT  shift 33
	NUMFLT  shift 34
	NAME  shift 3
	FIELD  shift 4
	STRING  shift 35
	TRUE  shift 36
	FALSE  shift 37
	LPAR  shift 38
	.  error

	log  goto 125
	var  goto 40


state 84
	log : log NEQ . log  (64)

	NUMINT  shift 33
	NUMFLT  shift 34
	NAME  shift 3
	FIELD  shift 4
	STRING  shift 35
	TRUE  shift 36
	FALSE  shift 37
	LPAR  shift 38
	.  error

	log  goto 126
	var  goto 40


state 85
	stmt : CALL namefunc2 ml . callparam POINT  (19)
	ml : ml . NL  (103)
	callouts : .  (88)

	NL  shift 127
	OUT  shift 128
	POINT  reduce 88
	IN  reduce 88

	callparam  goto 129
	callouts  goto 130
	callout  goto 131


state 86
	stmt : WHILE log POINT . input2 ENDWHILE POINT  (14)
	input2 : .  (6)

	.  reduce 6

	input2  goto 132


state 87
	stmt2 : SUB namefunc ml . parameters POINT input ENDSUB POINT  (31)
	ml : ml . NL  (103)
	funcins : .  (81)

	NL  shift 127
	IN  shift 133
	POINT  reduce 81
	OUT  reduce 81

	parameters  goto 134
	funcins  goto 135
	funcin  goto 136


state 88
	stmt : TYPE NAME declvars . ENDTYPE POINT  (11)
	declvars : declvars . declvar1  (35)

	NL  shift 137
	NAME  shift 30
	TABLE  shift 31
	ENDTYPE  shift 138
	.  error

	declvar  goto 139
	declvar1  goto 140


state 89
	stmt : FOR EACH namestru . IN nametab POINT input2 ENDFOR POINT  (18)

	IN  shift 141
	.  error


state 90
	stmt : APPEND namestru TO . nametab POINT  (20)

	NAME  shift 52
	.  error

	nametab  goto 142


state 91
	stmt : READ nametab TO . namestru logkey POINT  (21)

	NAME  shift 50
	.  error

	namestru  goto 143


state 92
	logkey : KEY . logtbs  (79)
	logtbs : .  (77)

	.  reduce 77

	logtbs  goto 144


state 93
	stmt : DELETE nametab logkey . POINT  (22)

	POINT  shift 145
	.  error


state 94
	stmt : LOAD NAME POINT .  (23)

	.  reduce 23


state 95
	stmt : TBFIRST nametab POINT .  (17)

	.  reduce 17


state 96
	stmt : GOTO SCREEN NUMINT . POINT  (24)

	POINT  shift 146
	.  error


state 97
	stmt : NATIVECALL NAME POINT .  (30)

	.  reduce 30


state 98
	stmt : MODIFY nametab FROM . namestru logkey POINT  (29)

	NAME  shift 50
	.  error

	namestru  goto 147


state 99
	stmt : UPDATE sqltb SET . sqlpairs sqlwhere POINT  (28)

	NAME  shift 148
	.  error

	sqlfield  goto 149
	sqlpair  goto 150
	sqlpairs  goto 151


state 100
	sqlfds : sqlfds COMMA . sqlname  (107)

	NAME  shift 63
	NAMESQLJ  shift 64
	.  error

	sqlname  goto 152


state 101
	stmt : SELECT sqlfds FROM . sqljoin INTO sqltb sqlwhere POINT  (26)

	NAME  shift 61
	.  error

	sqltb  goto 153
	sqljoin  goto 154
	sqljoininner  goto 155


state 102
	stmt : INSERT INTO sqltb . LPAR sqlfds RPAR VALUES LPAR sqlvls RPAR POINT  (27)

	LPAR  shift 156
	.  error


state 103
	exp : NUMINT .  (56)

	.  reduce 56


state 104
	exp : NUMFLT .  (57)

	.  reduce 57


state 105
	exp : NAME .  (58)

	.  reduce 58


state 106
	exp : FIELD .  (59)

	.  reduce 59


state 107
	exp : STRING .  (60)

	.  reduce 60


state 108
	exp : LPAR . exp RPAR  (55)

	NUMINT  shift 103
	NUMFLT  shift 104
	NAME  shift 105
	FIELD  shift 106
	STRING  shift 107
	LPAR  shift 108
	.  error

	exp  goto 157


state 109
	attrib : var EQ exp .  (48)
	exp : exp . PLUS exp  (51)
	exp : exp . MINUS exp  (52)
	exp : exp . TIMES exp  (53)
	exp : exp . DIV exp  (54)

	PLUS  shift 158
	MINUS  shift 159
	DIV  shift 160
	TIMES  shift 161
	POINT  reduce 48


state 110
	type : TYPEC .  (38)

	.  reduce 38


state 111
	type : TYPEI .  (39)

	.  reduce 39


state 112
	type : TYPEF .  (40)

	.  reduce 40


state 113
	type : TYPEB .  (41)

	.  reduce 41


state 114
	type : namestru .  (42)

	.  reduce 42


state 115
	declvar : NAME AS type .  (32)

	.  reduce 32


state 116
	declvar : TABLE AS type .  (33)

	.  reduce 33


state 117
	log : LPAR log RPAR .  (69)

	.  reduce 69

